:bug: Added `ResizeObserver` to fix layout shift bug
ResizeObserver dimensions are used to set the width and height of the placeholder box

--- a/apps/web/app/expandable-cards/page.css
+++ b/apps/web/app/expandable-cards/page.css
@@ -1,11 +1,11 @@
 .mona-lisa-expandable-card-container-condensed{
-  width: fit-content;
   overflow: hidden;
   background-color: #ebebeb;
   padding: 1.3rem;
   gap: 1rem;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .mona-lisa-expandable-card-container-expanded{
@@ -21,11 +21,12 @@
 
 .app-store-expandable-card-container-condensed{
   background-color: #ebebeb;
-  height: fit-content;
+  width: 100%;
 }
 
 .app-store-expandable-card-container-expanded{
   background-color: #ebebeb;
+  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.15);
 }
 
 .app-store-expandable-card-background-image{
